[package]
edition = "2024"
version = "0.1.0"
name = "swap-io-sdk"

[dependencies]
anyhow = "1.0"
spl-memo = "4.0.0"
solana-sdk = "<1.17"
anchor-lang = "0.29.0"
rust_decimal = "1.37.1"
solana-client = "<1.17"
jupiter-amm-interface = "=0.4.7"
spl-token = { version = "4.0.0", features=["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
bytemuck = { version = "1.19.0", features = ["derive", "min_const_generics"] }
swap-io-clmm = {path = "../programs/amm", features = ["no-entrypoint", "client"]}